--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             </div>
             <div class="social-media">
                 <p>Follow us on:</p>
-                <a href="https://facebook.com/yourprofile" target="_blank" class="social-icon">
+                <a href="https://facebook.com/globalmediatechbrt" target="_blank" class="social-icon">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="https://instagram.com/yourprofile" target="_blank" class="social-icon">
+                <a href="https://instagram.com/global.mediatech" target="_blank" class="social-icon">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank" class="social-icon">
+                <a href="https://www.linkedin.com/company/globalmedia-tech?trk=public_profile_experience-item_profile-section-card_subtitle-click" target="_blank" class="social-icon">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </div>
