--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <img src="images/gmt logo.png" alt="Global Crew Media Tech Logo" class="logo">
+            <img src="images/gmt logo.png" alt="Global Media Tech Logo" class="logo">
             <h1>Global Media Tech</h1>
             <nav>
                 <ul>
