--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>Innovative Solutions for Creative Media, Design, and Digital Presence</p><br><br>
         <br><a href="#contact" class="btn-primary">Call Now !</a>
     </div>
-    <img src="images/banner.png" alt="Global Media Tech Banner" class="hero-image">
+    <img src="banner.png" alt="Global Media Tech Banner" class="hero-image">
 </section>
     <!-- Services Section -->
 <section id="services">
