--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="work-item">
                 <a href="https://www.facebook.com/chiyarastartup" target="_blank">
                     <div class="video-wrapper">
-                        <video src="images/works/chiyarastartup.mp4" autoplay loop muted playsinline></video>
+                        <video src="works/chiyarastartup.mp4" autoplay loop muted playsinline></video>
                         <div class="overlay">
                             <h3>चिया र Startup</h3>
                             <p>A Podcast With Entrepreneurs</p>
@@ -119,7 +119,7 @@
             <div class="work-item">
                 <a href="https://www.facebook.com/YantraScienceTechEntrepreneurshipFestival" target="_blank">
                     <div class="video-wrapper">
-                        <video src="images/works/yantra.mp4" autoplay loop muted playsinline></video>
+                        <video src="works/yantra.mp4" autoplay loop muted playsinline></video>
                         <div class="overlay">
                             <h3>Koshi Mini Yantra 2.0</h3>
                         </div>
@@ -129,7 +129,7 @@
             <div class="work-item">
                 <a href="https://www.facebook.com/CafeDeNuma" target="_blank">
                     <div class="video-wrapper">
-                        <video src="images/works/cafedenuma.mp4" autoplay loop muted playsinline></video>
+                        <video src="works/cafedenuma.mp4" autoplay loop muted playsinline></video>
                         <div class="overlay">
                             <h3>Advertisement of Cafe De Numa</h3>
                         </div>
@@ -139,7 +139,7 @@
             <div class="work-item">
                 <a href="https://www.facebook.com/nscnepalofficial" target="_blank">
                     <div class="video-wrapper">
-                        <video src="images/works/tugofwar.mp4" autoplay loop muted playsinline></video>
+                        <video src="works/tugofwar.mp4" autoplay loop muted playsinline></video>
                         <div class="overlay">
                             <h3>2nd National Tug of War </h3>
                         </div>
@@ -149,7 +149,7 @@
             <div class="work-item">
                 <a href="https://www.facebook.com/emediware" target="_blank">
                     <div class="video-wrapper">
-                        <video src="images/works/e-mediware.mp4" autoplay loop muted playsinline></video>
+                        <video src="works/e-mediware.mp4" autoplay loop muted playsinline></video>
                         <div class="overlay">
                             <h3>e-mediware Software</h3>
                             <p>Advertisement of e-mediware Software</p>
@@ -160,7 +160,7 @@
             <div class="work-item">
                 <a href="https://www.facebook.com/watch/?mibextid=wwXIfr&v=538515815865897&rdid=OtOfcJ5CDXEWhdKi" target="_blank">
                     <div class="video-wrapper">
-                        <video src="images/works/fsu.mp4" autoplay loop muted playsinline></video>
+                        <video src="works/fsu.mp4" autoplay loop muted playsinline></video>
                         <div class="overlay">
                             <h3>FSU Sports Week MMAMC</h3>
                         </div>
@@ -179,49 +179,49 @@
             <h2>Our Clients</h2>
             <div class="clients-grid">
                 <div class="client-item">
-                    <img src="images/clients/chiyarastartup.jpg" alt="Client Logo 1">
+                    <img src="clients/chiyarastartup.jpg" alt="Client Logo 1">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/raneast.png" alt="Client Logo 2">
+                    <img src="clients/raneast.png" alt="Client Logo 2">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/adarsha.jpg" alt="Client Logo 3">
+                    <img src="clients/adarsha.jpg" alt="Client Logo 3">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/pi.png" alt="Client Logo 4">
+                    <img src="clients/pi.png" alt="Client Logo 4">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/fsu.jpg" alt="Client Logo 5">
+                    <img src="clients/fsu.jpg" alt="Client Logo 5">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/emediware.png" alt="Client Logo 6">
+                    <img src="clients/emediware.png" alt="Client Logo 6">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/nabilsse.png" alt="Client Logo 7">
+                    <img src="clients/nabilsse.png" alt="Client Logo 7">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/nsc.jpg" alt="Client Logo 8">
+                    <img src="clients/nsc.jpg" alt="Client Logo 8">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/akshara.png" alt="Client Logo 9">
+                    <img src="clients/akshara.png" alt="Client Logo 9">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/numa.png" alt="Client Logo 10">
+                    <img src="clients/numa.png" alt="Client Logo 10">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/jaynepalcup.png" alt="Client Logo 11">
+                    <img src="clients/jaynepalcup.png" alt="Client Logo 11">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/stclair.jpg" alt="Client Logo 12">
+                    <img src="clients/stclair.jpg" alt="Client Logo 12">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/mmamc.png" alt="Client Logo 13">
+                    <img src="clients/mmamc.png" alt="Client Logo 13">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/rotary.png" alt="Client Logo 14">
+                    <img src="clients/rotary.png" alt="Client Logo 14">
                 </div>
                 <div class="client-item">
-                    <img src="images/clients/hp.png" alt="Client Logo 15">
+                    <img src="clients/hp.png" alt="Client Logo 15">
                 </div>
                 <!-- Add more client logos as needed -->
             </div>
@@ -244,51 +244,51 @@
             <!-- Top Row -->
             <div class="team-row top-row">
                 <div class="team-member">
-                    <img src="images/teams/anuj.jpg" alt="Anuj Neupane">
+                    <img src="teams/anuj.jpg" alt="Anuj Neupane">
                     <h4>Anuj Neupane</h4>
                     <p>Managing Director</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/teams/pranish.jpg" alt="Pranish Dahal">
+                    <img src="teams/pranish.jpg" alt="Pranish Dahal">
                     <h4>Pranish Dahal</h4>
                     <p>Finance & Operation Head</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/teams/rahul.jpg" alt="Rahul Yadav">
+                    <img src="teams/rahul.jpg" alt="Rahul Yadav">
                     <h4>Rahul Yadav</h4>
                     <p>Executive Producer</p>
                 </div>  
             </div>
             <div class="team-row">
                 <div class="team-member">
-                    <img src="images/teams/shishir.jpg" alt="Shishir Ghimire">
+                    <img src="teams/shishir.jpg" alt="Shishir Ghimire">
                     <h4>Shishir Ghimire</h4>
                     <p>Developer</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/teams/nishant.jpg" alt="Nishant Karki">
+                    <img src="teams/nishant.jpg" alt="Nishant Karki">
                     <h4>Nishant Karki</h4>
                     <p>Chief Editor</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/teams/nabin.jpg" alt="Nabin Tiwari">
+                    <img src="teams/nabin.jpg" alt="Nabin Tiwari">
                     <h4>Nabin Tiwari</h4>
                     <p>Policy & Research</p>
                 </div>
             </div>
             <div class="team-row">
                 <div class="team-member">
-                    <img src="images/teams/binip.jpg" alt="Binip Ghimire">
+                    <img src="teams/binip.jpg" alt="Binip Ghimire">
                     <h4>Binip Ghimire</h4>
                     <p>Senior Developer</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/teams/nirmal.jpg" alt="Nirmal Sapkota">
+                    <img src="teams/nirmal.jpg" alt="Nirmal Sapkota">
                     <h4>Nirmal Sapkota</h4>
                     <p>UI/UX Designer</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/teams/chandan.jpg" alt="Chandan Thapa">
+                    <img src="teams/chandan.jpg" alt="Chandan Thapa">
                     <h4>Chandan Thapa</h4>
                     <p>Marketing Head</p>
                 </div>
