--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                 <p>Reliable domain registration and hosting services.</p>
             </div>
             <div class="service-item">
-                <i class="fas fa-network-wired"></i>
-                <h3>Network Services</h3>
-                <p>Efficient network solutions for smooth operations.</p>
+                <i class="fas fa-chalkboard-teacher"></i>
+                <h3>IT Workshops and Training</h3>
+                <p>Empowering individuals and teams with hands-on technology skills.</p>
             </div>
             <div class="service-item">
                 <i class="fas fa-bullhorn"></i>
