--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
                     <img src="clients/rotary.png" alt="Client Logo 14">
                 </div>
                 <div class="client-item">
-                    <img src="clients/hp.png" alt="Client Logo 15">
+                    <img src="clients/Nihareeka.png" alt="Client Logo 15">
+                </div>
+                <div class="client-item">
+                    <img src="clients/sasthm.png" alt="Client Logo 15">
                 </div>
                 <!-- Add more client logos as needed -->
             </div>
