--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
                 <div class="client-item">
                     <img src="clients/sasthm.png" alt="Client Logo 15">
                 </div>
+                <div class="client-item">
+                    <img src="clients/hp.png" alt="Client Logo 15">
+                </div>
                 <!-- Add more client logos as needed -->
             </div>
         </div>
