--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <img src="clients/rotary.png" alt="Client Logo 14">
                 </div>
                 <div class="client-item">
-                    <img src="clients/Nihareeka.png" alt="Client Logo 15">
+                    <img src="clients/nihareeka.png" alt="Client Logo 15">
                 </div>
                 <div class="client-item">
                     <img src="clients/sasthm.png" alt="Client Logo 16">
@@ -341,4 +341,5 @@
 </footer>
 </body>
 </html>
+
 
