--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <p>Managing Director</p>
                 </div>
                 <div class="team-member">
-                    <img src="teams/pranish.jpg" alt="Pranish Dahal">
+                    <img src="teams/pd.jpg" alt="Pranish Dahal">
                     <h4>Pranish Dahal</h4>
                     <p>Finance & Operation Head</p>
                 </div>
@@ -341,6 +341,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
